feat: add admin getProduct API
