# routes/apis/index.js
@@ -261,6 +261,52 @@ router.get(
   adminController.getProducts
 )
 
+router.get(
+  '/admin/products/:id',
+  /* #swagger.tags = ['Product']
+     #swagger.description = 'Get單一商品資訊' */
+  /* #swagger.responses[200] = { 
+      schema: {
+        "status": "success",
+        "data": {
+          "id": 3,
+          "name": "可樂",
+          "image": "https://i.imgur.com/IILT3WL.jpg",
+          "description": "可樂超好喝!!!",
+          "stockQuantity": 200,
+          "costPrice": 15,
+          "sellPrice": 40,
+          "productStatus": "1",
+          "categoryId": 1,
+          "createdAt": "2024-01-22T06:17:31.000Z",
+          "updatedAt": "2024-01-22T10:44:15.000Z"
+        }
+    },
+      description: "成功獲取商品資訊" } */
+  /* #swagger.responses[401] = { 
+      schema: {
+        "status": "error",
+        "error": {
+          "name": "Unauthorized",
+          "message": "使用者未登入!",
+          "stack":"Unauthorized: 使用者未登入!\n    at new customError (D:\\Project\\onBuyWay\\Backend\\class\\errors\\customError.js:8:11)\n    at new APIError (D:\\Project\\onBuyWay\\Backend\\class\\errors\\APIError.js:6:5)\n    at adminAuthenticated (D:\\Project\\onBuyWay\\Backend\\middleware\\auth.js:56:7)\n    at Layer.handle [as handle_request] (D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib\\router\\layer.js:95:5)\n    at next (D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib\\router\\route.js:144:13)\n    at Route.dispatch (D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib\\router\\route.js:114:3)\n    at Layer.handle [as handle_request] (D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib\\router\\layer.js:95:5)\n    at D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib\\router\\index.js:284:15\n    at Function.process_params (D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib\\router\\index.js:346:12)\n    at next (D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib\\router\\index.js:280:10)"
+        }
+      },
+      description: "使用者未登入" } */
+  /* #swagger.responses[404] = { 
+      schema: {
+          "status": "error",
+          "error": {
+              "name": "NOT FOUND",
+              "message": "找不到該商品",
+              "stack": "NOT FOUND: 找不到該商品\n    at new customError (D:\\Project\\onBuyWay\\Backend\\class\\errors\\customError.js:8:11)\n    at new APIError (D:\\Project\\onBuyWay\\Backend\\class\\errors\\APIError.js:6:5)\n    at getProduct (D:\\Project\\onBuyWay\\Backend\\controllers\\apis\\admin-controller.js:22:11)\n    at process.processTicksAndRejections (node:internal/process/task_queues:95:5)"
+          }
+      },
+      description: "找不到該商品" } */
+  adminAuthenticated,
+  adminController.getProduct
+)
+
 // 新增商品API
 router.post(
   '/admin/products',
