# swagger-output.json
@@ -894,6 +894,150 @@
       }
     },
     "/api/admin/products/{id}": {
+      "get": {
+        "tags": [
+          "Product"
+        ],
+        "description": "Get單一商品資訊",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "成功獲取商品資訊",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "success"
+                },
+                "data": {
+                  "type": "object",
+                  "properties": {
+                    "id": {
+                      "type": "number",
+                      "example": 3
+                    },
+                    "name": {
+                      "type": "string",
+                      "example": "可樂"
+                    },
+                    "image": {
+                      "type": "string",
+                      "example": "https://i.imgur.com/IILT3WL.jpg"
+                    },
+                    "description": {
+                      "type": "string",
+                      "example": "可樂超好喝!!!"
+                    },
+                    "stockQuantity": {
+                      "type": "number",
+                      "example": 200
+                    },
+                    "costPrice": {
+                      "type": "number",
+                      "example": 15
+                    },
+                    "sellPrice": {
+                      "type": "number",
+                      "example": 40
+                    },
+                    "productStatus": {
+                      "type": "string",
+                      "example": "1"
+                    },
+                    "categoryId": {
+                      "type": "number",
+                      "example": 1
+                    },
+                    "createdAt": {
+                      "type": "string",
+                      "example": "2024-01-22T06:17:31.000Z"
+                    },
+                    "updatedAt": {
+                      "type": "string",
+                      "example": "2024-01-22T10:44:15.000Z"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          },
+          "401": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "error"
+                },
+                "error": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string",
+                      "example": "Unauthorized"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "使用者未登入!"
+                    },
+                    "stack": {
+                      "type": "string",
+                      "example": "Unauthorized: 使用者未登入!\n at new customError (D:\\Project\\onBuyWay\\Backend\\class\\errors\\customError.js:8:11)\n at new APIError (D:\\Project\\onBuyWay\\Backend\\class\\errors\\APIError.js:6:5)\n at adminAuthenticated (D:\\Project\\onBuyWay\\Backend\\middleware\\auth.js:56:7)\n at Layer.handle [as handle_request] (D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib outer\\layer.js:95:5)\n at next (D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib outer oute.js:144:13)\n at Route.dispatch (D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib outer oute.js:114:3)\n at Layer.handle [as handle_request] (D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib outer\\layer.js:95:5)\n at D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib outer\\index.js:284:15\n at Function.process_params (D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib outer\\index.js:346:12)\n at next (D:\\Project\\onBuyWay\\Backend\\node_modules\\express\\lib outer\\index.js:280:10)"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "使用者未登入"
+          },
+          "404": {
+            "schema": {
+              "type": "object",
+              "properties": {
+                "status": {
+                  "type": "string",
+                  "example": "error"
+                },
+                "error": {
+                  "type": "object",
+                  "properties": {
+                    "name": {
+                      "type": "string",
+                      "example": "NOT FOUND"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "找不到該商品"
+                    },
+                    "stack": {
+                      "type": "string",
+                      "example": "NOT FOUND: 找不到該商品\n at new customError (D:\\Project\\onBuyWay\\Backend\\class\\errors\\customError.js:8:11)\n at new APIError (D:\\Project\\onBuyWay\\Backend\\class\\errors\\APIError.js:6:5)\n at getProduct (D:\\Project\\onBuyWay\\Backend\\controllers\\apis\\admin-controller.js:22:11)\n at process.processTicksAndRejections (node:internal/process/task_queues:95:5)"
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            },
+            "description": "找不到該商品"
+          }
+        }
+      },
       "put": {
         "tags": [
           "Product"
